--- a/HalilPazarlama/HalilPazarlama.csproj
+++ b/HalilPazarlama/HalilPazarlama.csproj
@@ -43,6 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Baslangic.cs" />
+    <Compile Include="BulasikMakinesi.cs" />
+    <Compile Include="BuzDolabi.cs" />
+    <Compile Include="CamasirMakinesi.cs" />
+    <Compile Include="Depo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
